--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,8 +43,11 @@
   #sunburst_container {
     min-width: 310px;
     max-width: 800px;
-    margin: 0 auto
+    margin: 0 auto;
+    font: 20px;
   }
+
+  
 
   /* scroll_bar */
   svg {
