--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,24 +83,25 @@
               fill: lightSteelBlue;
               fill-opacity: .5;
           }
-
-/* html */
-#myVideo {
-  /* position: fixed;
-  right: 0;
-  bottom: 0; */
-  margin-top: -500px;
-  min-width: 100%;
-  min-height: 20%;
-}
-
 /* Add some content at the bottom of the video/page */
 .banner {
-  margin-top: -108px;
-  background: rgba(217,215,215);
+  margin-top: -50px;
+  background: linear-gradient(to bottom, #99cc00 61%, #ffffff 101%);
   color: #f1f1f1;
   width: 100%;
-   padding-top: 150px;
+  padding-top: 75px;
+  align-content: center;
   /*padding: 20px;*/  
 }
+
+.div {
+  border-style: solid;
+  border-color:rgb(36, 70, 5);
+  background-color:rgb(188, 240, 140) ;
+}
+
+
+
+
+
   
